Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -200,8 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def restaurant_name(restaurant):\n",
-    "    return "
+    "def restaurant_name(name):\n",
+    "    return name"
    ]
   },
   {
