Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,8 +213,7 @@
    ],
    "source": [
     "def restaurant_name(name):\n",
-    "    return name\n",
-    "()"
+    "    return name\n"
    ]
   },
   {
