Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
     }
    ],
    "source": [
-    "def restaurant_name(name):\n",
+    "def restaurant_name(restaurant):\n",
     "    return name\n"
    ]
   },
