Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def restaurant_name(Forkrestaurant):\n",
+    "def restaurant_name(Fork & Fig):\n",
+    "    return\n",
     "    pass\n"
    ]
   },
