--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(Fork & Fig):\n",
-    "    return\n",
+    "    return restauranc\n",
     "    pass\n"
    ]
   },
