Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,7 @@
    "source": [
     "def restaurant_name(Fork & Fig):\n",
     "    return restaurant_name\n",
-    "\n",
+    "restaruant\n",
     "    pass\n"
    ]
   },
