--- a/index.ipynb
+++ b/index.ipynb
@@ -196,14 +196,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-133756976592>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-133756976592>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def restaurant_name(Fork & Fig):\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def restaurant_name(Fork & Fig):\n",
     "    return restaurant_name\n",
     "restaurant_name()\n",
-    "    pass\n"
+    "   "
    ]
   },
   {
