Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "def restaurant_name(Fork_ Fig):\n",
+    "def restaurant_name'('Fork_ Fig'):\n",
     "    return (restaurant_name)\n",
     "restaurant_name()\n",
     "   "
