--- a/index.ipynb
+++ b/index.ipynb
@@ -196,15 +196,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-3cca4099de65>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-12-36b9a4ad7daa>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-3cca4099de65>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def restaurant_name ('Fork_ Fig'):\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-36b9a4ad7daa>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def restaurant_name ('Fork & Fig'):\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
