--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "restaurant_rating(frontier_restaurant) # 4.0"
+    "restaurant_rating(frontier_restaurant)\n",
+    "# 4.0"
    ]
   },
   {
