Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
    ],
    "source": [
     "def restaurant_name ('Fork & Fig'):\n",
-    "    return (restaurant_name)\n",
+    "    return [name(restaurant_name)\n",
     "restaurant_name()\n",
     "   "
    ]
