Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "def restaurant_name (restaurant Fig'):\n",
+    "def restaurant_name (restaurant):\n",
     "    return [name]\n",
     "restaurant_name()\n",
     "   "
