--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
    ],
    "source": [
     "def restaurant_name (restaurant):\n",
-    "    return  [name]\n",
+    "    return restaurant [name]\n",
     "restaurant_name()\n",
     "   "
    ]
