Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
     }
    ],
    "source": [
-    "def restaurant_name (Fork_Fig):\n",
+    "def restaurant_name (fork_Fig):\n",
     "    return restaurant ['name']\n",
     "restaurant_name()\n",
     "   "
