--- a/index.ipynb
+++ b/index.ipynb
@@ -215,6 +215,7 @@
     "def restaurant_name (fork_fig):\n",
     "    return restaurant ['name']\n",
     "restaurant_name()\n",
+    "restaurnt\n",
     "   "
    ]
   },
