--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
     "def restaurant_name (fork_fig):\n",
     "    return restaurant ['name']\n",
     "restaurant_name()\n",
-    "restaurnt\n",
+    "restaurnt_name (fork)\n",
     "   "
    ]
   },
