Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,7 @@
    ],
    "source": [
     "def restaurant_name (fork_fig):\n",
-    "    return restaurant ['name']\n",
+    "    return fork_fig ['name']\n",
     "restaurant_name()\n",
     "restaurnt_name (fork-fig)\n",
     "   "
