Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
     "def restaurant_name (fork_fig):\n",
     "    return fork_fig ['name']\n",
     "restaurant_name()\n",
-    "restaurnt_name (fork-fig)\n",
+    "restaurnt_name g)\n",
     "   "
    ]
   },
